fixed tooltip overflow bug

--- a/react-app/src/components/MainView/Dashboard/index.css
+++ b/react-app/src/components/MainView/Dashboard/index.css
@@ -1,5 +1,5 @@
 .page-container {
-  position: absolute;
+  position: relative;
   left: 150px;
   height: 100%;
   width: calc(100% - 150px);
